--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,6 @@
 #H2 Server Properties
+#Mon Mar 29 21:18:04 CST 2021
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/demo|demo
+webSSL=false
 webAllowOthers=true
 webPort=8082
-webSSL=false
